[workspace]
resolver = "2"
members = [
    "sdk",
    "shared",
    "server",
    "launcher",
    "client",
    "log",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FreeMode Team"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
libloading = "0.8"
tokio = { version = "1", features = ["full"] }
bincode = "1"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1"
parking_lot = "0.12"
dirs = "6"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
    "Win32_UI_Shell",
] }