[package]
name = "freemode-launcher"
description = "FreeMode Launcher — GTA V"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "freemode-launcher"
path = "src/main.rs"

[dependencies]
freemode-log = { path = "../log" }
freemode-sdk = { path = "../sdk" }
egui = "0.29"
eframe = { version = "0.29", features = ["glow"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
]}
windows-core = "0.58"
