[package]
name = "freemode-log"
description = "FreeMode MP injection logger — logs all inject, load, hook steps to file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log = "0.4"
chrono = { version = "0.4", features = ["clock"] }
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming",
] }