[package]
name = "freemode-log"
description = "FreeMode MP injection logger — logs all inject, load, hook steps to file"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
log = { workspace = true }
chrono = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_WindowsProgramming",
    "Win32_System_LibraryLoader",
    "Win32_Security",
] }
