[package]
name = "freemode-sdk"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
freemode-shared = { path = "../shared" }
sha2 = "0.10"
sha1 = "0.10"
crc32fast = "1.4"
hex = "0.4"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_WindowsProgramming",
    "Win32_System_Diagnostics_Debug",
 ] }

windows-core = "0.62"
