[package]
name = "freemode-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
freemode-shared = { path = "../shared" }
sha2 = "0.10"
sha1 = "0.10"
crc32fast = "1.4"
hex = "0.4"
hmac = "0.12"
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

[target.'cfg(windows)'.dependencies]
windows = { workspace = true }