[package]
name = "freemode-server"
description = "FreeMode Server — GTA V multiplayer server core."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "freemode-server"
path = "src/main.rs"

[lib]
name = "freemode_mp_server"
path = "src/lib.rs"

[dependencies]
freemode-shared = { path = "../shared" }
freemode-sdk = { path = "../sdk" }
tokio.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
bytemuck.workspace = true
libloading.workspace = true
log.workspace = true

# Networking
socket2 = "0.5"