[package]
name = "freemode-shared"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
bitvec = "1.0"
bytemuck = { workspace = true }

[lib]
name = "freemode_shared"
crate-type = ["rlib"]